# ragrep

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEVELOPING.md  LICENSE  README.md
docs/: IMPLEMENTATION_GUIDE_SUMMARY.md  INDEX.md  PHASE1_IMPLEMENTATION_GUIDE.md  PHASE2_IMPLEMENTATION_GUIDE.md  PHASE3_IMPLEMENTATION_GUIDE.md  README.md
src/: chunker.rs  cleaner.rs  client.rs  config.rs  constants.rs  context.rs  db.rs  embedder.rs  git_watcher.rs  indexer.rs  main.rs  protocol.rs  query.rs  reranker.rs  server.rs  store.rs
tests/: integration_test.rs
