[package]
name = "ragrep"
version = "0.1.0"
edition = "2021"

[dependencies]
ignore = "0.4"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
directories = "5.0"
# fastembed = "4.4.0"
fastembed = { path = "../../keturiosakys/fastembed-rs" }
dirs = "6.0.0"
toml = "0.8.20"
sqlite-vec = "0.1.6"
zerocopy = "0.7"
colored = "3.0.0"
