[package]
name = "ragrep"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rag"
path = "src/main.rs"

[dependencies]
ignore = "0.4"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
directories = "5.0"
fastembed = "4.5.0"
dirs = "6.0.0"
toml = "0.8.20"
sqlite-vec = "0.1.6"
zerocopy = "0.7"
promkit = "0.6.2"
log = "0.4.25"
termcolor = "1.4.1"
env_logger = "0.11.6"
indicatif = "0.17.11"
indicatif-log-bridge = "0.2.3"
git2 = "0.20.0"
