[package]
name = "ragrep"
description = "A fast, natural language code search tool"
license = "MIT"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rag"
path = "src/main.rs"

[dependencies]
ignore = "0.4"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
fastembed = "5.2"
dirs = "6.0.0"
toml = "0.8"
sqlite-vec = "0.1"
zerocopy = "0.8"
promkit = "0.6"
log = "0.4"
termcolor = "1.4"
env_logger = "0.11"
indicatif = "0.18"
indicatif-log-bridge = "0.2"
git2 = "0.20"
streaming-iterator = "0.1"
notify = "8.2.0"
